# study-FastAPI-DB

./: .dockerignore  .gitignore  README-API.md  README-DB.md  README-Docker.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: database.py  jobs.py  main.py  models.py  orm.py
app/routers/: jobs.py  products.py
tests/: conftest.py  test_concurrency.py
