[project]
name = "product-catalog"
version = "0.3.0"
description = "FastAPI REST API didattica con concorrenza asincrona"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy>=2.0",
    "asyncpg",
    "psycopg2-binary",
    "python-dotenv",
    "greenlet>=3.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"          # tutti gli async def test_* sono automaticamente async
testpaths = ["tests"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
